--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -7,23 +7,17 @@
 </nav>
 
 <main>
-    <aside class="spacer">&nbsp;</aside>
     <div class="entry" itemscope itemtype="http://schema.org/Article">
         <header>
             <h1 itemprop="name"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
             <span class="datesection" itemprop="articleBody"><time>{{ .Date.Format "02 Jan 2006" }}</time> in {{ .Section }}</span>
         </header>
         {{ .Content }}
+        <div class="btn-group">
+            <span class="btn{{if not .PrevInSection}} disabled{{end}}"><a href="{{if .PrevInSection}}{{.PrevInSection.Permalink}}{{end}}">Previous</a></span>
+            <span class="btn{{if not .NextInSection}} disabled{{end}}"><a href="{{if .NextInSection}}{{.NextInSection.Permalink}}{{end}}">Next</a></span>
+        </div>
     </div>
-<!--      <nav>
-      <ul class="pager">
-        <a class="btn btn-lg cc-btn-default{{if not .PrevInSection}} disabled{{end}}" href="{{if .PrevInSection}}{{.PrevInSection.Permalink}}{{end}}">Older</a>
-        <a class="btn btn-lg cc-btn-default{{if not .NextInSection}} disabled{{end}}" href="{{if .NextInSection}}{{.NextInSection.Permalink}}{{end}}">Newer</a>
-        {{ if .Prev }}<li><a href="{{ .Prev.Permalink }}">{{ .Prev.Title }}</a></li>{{ end }}
-        {{ if .Next }}<li><a href="{{ .Next.Permalink }}">{{ .Next.Title }} →</a></li>{{ end }}
-      </ul>
-      </nav>
--->
   <aside>
     <div class="aside">
       <h4>Gist</h4>
