--- a/layouts/section/photos.html
+++ b/layouts/section/photos.html
@@ -1,9 +1,6 @@
 {{ partial "header.html" . }}
 <nav class="navbar" role="navigation">
-  <ol class="breadcrumb">
-    <li><a href="/index.html">Cover</a></li>
-    <li class="active">{{ .Title }}</li>
-  </ol>
+    <a href="/index.html">{{ .Title }}</a>
 </nav>
 <main>
   <ul class="photoset">
