--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -68,6 +68,7 @@ nav {
   -webkit-justify-content: right;
   justify-content: right;
   margin: 0;
+  margin-left: 1em;
   padding: 0;
   opacity: 0.8;
   background-color: rgba(255,255,255,0.6);
@@ -84,8 +85,8 @@ main {
   flex: 1;
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
-  flex-direction: row;
-  margin: 1.6em;
+  flex-direction: column;
+  align-items: center;
 }
 
 footer, footer a {
@@ -94,21 +95,25 @@ footer, footer a {
   text-align: center;
 }
 
-nav > ol  {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0;
-  padding: 0.6em;
-}
-
-.breadcrumb > li, .aside__tags > li {
+.aside__tags > li {
   display: inline-block;
   list-style-type: none;
 }
 
-.breadcrumb>li+li:before {
-  color: rgba(119,119,119,.8);
-  content: "\21e5\00a0";
+.aside__tags {
+    padding: 0;
+    font-style: normal;
+    font-size: 0.8rem;
+}
+
+.aside__tags > li {
+    padding-right: 1em;
+    padding-left: 1em;
+    background: #efefef;
+    border-radius: 3px;
+    line-height: 22px;
+    padding-top: 0.4em;
+    padding-bottom: 0.4em;
 }
 
 main .content > header {
@@ -135,10 +140,11 @@ main > .content {
   -webkit-justify-content: flex-start;
   justify-content: flex-start;
   -webkit-align-items: flex-start;
-  align-items: flex-start;
+  align-items: center;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  margin: 1.2em;
 }
 
 main .entry {
@@ -153,6 +159,7 @@ main .entry {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   padding: 1.2em;
+  width:50%;
 }
 
 main .entry > p {
@@ -188,11 +195,7 @@ main > aside {
   -ms-flex-direction: column;
   flex-direction: column;
   margin-top: 1em;
-  padding: 1em;
-}
-
-main > aside {
-    min-width: 12em;
+  min-width: 12em;
 }
 
 .aside {
@@ -208,10 +211,8 @@ main > aside {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  background-color: rgba(141,141,141, 0.2);
-  border-radius: 8px;
-  padding: 1em;
-  margin-bottom: 1em;
+  font-style: italic;
+  font-size: 0.9rem;
 }
 
 .aside p {
@@ -221,25 +222,12 @@ main > aside {
 .aside a, .aside p {
   line-height: 1.45;
   letter-spacing: .005rem;
-  font-size: 13px;
   color: rgba(35,35,35,.8);
-}
-
-.aside ol {
-  padding-left: 0;
-}
-
-.aside > ol >li+li:before {
-  content: ",";
 }
 
 .readtime {
   font-size: 0.6em;
   color: rgba(0,0,0,0.4);
-}
-
-.aside__tags {
-    font-size: 13px;
 }
 
 /* http://jonathannicol.com/blog/2014/06/16/centre-crop-thumbnails-with-css/ */
@@ -264,6 +252,11 @@ main > aside {
 .thumbnail img.portrait {
   width: 100%;
   height: auto;
+}
+
+.thumbnail-description {
+    font-style: italic;
+    color: rgba(0,0,0,0.6);
 }
 
 /** Button (Prev/Next) */
@@ -323,10 +316,8 @@ main > aside {
     flex-direction: row;
     flex-wrap: wrap;
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+  main .entry {
+      width: 100%;
   }
 }
 
@@ -342,10 +333,8 @@ main > aside {
     flex-direction: row;
     flex-wrap: wrap;
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+  main .entry {
+      width: 100%;
   }
 }
 
@@ -360,10 +349,8 @@ main > aside {
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+  main .entry {
+      width: 100%;
   }
 }
 
@@ -381,10 +368,8 @@ main > aside {
     flex-direction: row;
     flex-wrap: wrap;
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+  main .entry {
+      width: 100%;
   }
 }
 
@@ -400,10 +385,8 @@ main > aside {
     flex-direction: row;
     flex-wrap: wrap;
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+  main .entry {
+      width: 100%;
   }
 }
 
@@ -419,10 +402,8 @@ main > aside {
     flex-direction: row;
 
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+  main .entry {
+      width: 100%;
   }
 }
 
@@ -439,10 +420,8 @@ main > aside {
     flex-direction: row;
     flex-wrap: wrap;
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+  main .entry {
+      width: 100%;
   }
 }
 
@@ -458,10 +437,8 @@ main > aside {
     flex-direction: row;
     flex-wrap: wrap;
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+  main .entry {
+      width: 100%;
   }
 }
 
@@ -476,10 +453,8 @@ main > aside {
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+  main .entry {
+      width: 100%;
   }
 }
 
@@ -493,9 +468,8 @@ and (max-width : 1024px) {
     flex-direction: column;
     flex-wrap: wrap;
   }
-  main > aside {
-    -webkit-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
+
+  main .entry {
+      width: 100%;
   }
 }
