--- a/layouts/partials/header-blog.html
+++ b/layouts/partials/header-blog.html
@@ -17,14 +17,18 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link rel="dns-prefetch" href="{{ $baseurl }}"/>
   <link rel="preconnect" href="{{ $baseurl }}"/>
   <link rel="prerender" href="{{ $baseurl }}/photos.html" as="html"/>
+  <link rel="prerender" href="{{ $baseurl }}/post.html" as="html"/>
   <link rel="next" href="{{ $baseurl }}/photos.html"/>
   <link rel="canonical" href="{{ .Permalink }}"/>
   {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
   <link rel="preload" href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link rel="preload" href="{{ $baseurl }}/css/photos.min.css"/>
+  <link rel="stylesheet" href="{{ $baseurl }}/css/vendor.min.css"/>
   <link rel="stylesheet" href="{{ $baseurl }}/css/blog.min.css"/>
-  <script src="{{ $baseurl }}/js/ga.min.js"></script>
+  <script src="{{ $baseurl }}/js/vendor.min.js" defer async></script>
+  <script src="{{ $baseurl }}/js/site.min.js" defer async></script>
+  <script src="{{ $baseurl }}/js/ga.min.js" defer async></script>
 </head>
 <body>
