--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,12 +17,16 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link rel="dns-prefetch" href="{{ $baseurl }}"/>
+  <link rel="preconnect" href="{{ $baseurl }}"/>
   <link rel="next" href="{{ $baseurl }}/photos.html"/>
   <link rel="icon" type="image/ico" href="{{ $baseurl }}/assets/favicon.ico"/>
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
-  <script src="{{ $baseurl }}/js/ga.min.js"></script>
-  <link rel="stylesheet" href="{{ $baseurl }}/css/site.min.css"/>
+  <link rel="preload" href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ $baseurl }}/css/vendor.min.css"/>
+  <link rel="stylesheet" href="{{ $baseurl }}/css/photos.min.css"/>
+  <script src="{{ $baseurl }}/js/vendor.min.js" defer async></script>
+  <script src="{{ $baseurl }}/js/site.min.js" defer async></script>
+  <script src="{{ $baseurl }}/js/ga.min.js" defer async></script>
 </head>
 <body>
