--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -45,7 +45,7 @@
 <meta name="twitter:image" content="{{ .Params.thumbnail }}">
 {{ else }}
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="{{ $baseurl }}/assets/profile.png">
+<meta name="twitter:image" content="{{ $baseurl }}/assets/profile.jpg">
 {{ end }}
 <meta name="twitter:site" content="@jmalonzo">
 <meta name="twitter:title" content="{{ .Title }}">
