--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -53,8 +53,7 @@ h3 { font-size: 18px; }
 
 blockquote {
   font-style: italic;
-  font-size: 0.6em;
-  background-color: rgba(141,141,141, 0.2);
+  border: thin solid rgba(141, 141, 141, 0.9);
   border-radius: 4px;
   padding: 2em;
   margin-bottom: 2em;
