--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -27,5 +27,6 @@
             <em>{{ description }}</em>
         </p>
         {{ content }}
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "80594feb398b4a8198c0979bbafed882"}'></script><!-- End Cloudflare Web Analytics -->
     </body>
 </html>
